--- a/viewer/renderer/css/event.css
+++ b/viewer/renderer/css/event.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;300;400;500;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 *
 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'M PLUS 1p', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body
@@ -14,86 +14,104 @@ body
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #444950;
-  transition: 0.5s ease-in-out
+  background: #0c1022;
 }
 
-.card
+.box
 {
   position: relative;
   width: 400px;
-  height: 400px;
-  background: #282A36;
-  border-radius: 10px;
-}
-
-.imgBox
-{
-  position: absolute;
-  left: 50%;
-  top: -15%;
-  transform: translateX(-50%);
-  width: 192px;
-  height: 192px;
+  height: 500px;
+  background: rgba(0,0,0,0.75);
+  border-radius: 20px;
   overflow: hidden;
-}
-
-.imgBox img
-{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.card .contents
-{
-  display: block;
-}
-
-.card .contents .box
-{
-  height: 220px;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center; 
-}
-
-.card .contents .box button
-{
-  padding: 10px 30px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  font-size: 1em;
-  font-weight: 500;
-  background: #0D57C2;
-  color: #fff;
-  letter-spacing: 4px;
-  cursor: pointer;
-  width: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.card .contents .box button:hover
+.box::after
 {
-  opacity: 0.8;
+  content: '';
+  position: absolute;
+  width: 700px;
+  height: 700px;
+  background-image: conic-gradient(transparent, transparent, transparent, #00ccff);
+  animation: animate 4s linear infinite;
+  animation-delay: -2s;
 }
 
-.card .contents .url
+.box::before
 {
-  font-size: 1.25em;
+  content: '';
+  position: absolute;
+  width: 700px;
+  height: 700px;
+  background-image: conic-gradient(transparent, transparent, transparent, #d400d4);
+  animation: animate 4s linear infinite;
+}
+
+@keyframes animate
+{
+  0%
+  {
+    transform: rotate(0deg);
+  }
+  100%
+  {
+    transform: rotate(360deg);
+  }
+}
+
+.box span
+{
+  position: absolute;
+  inset: 5px;
+  background: #0c1022;
+  border-radius: 16px;
+  z-index: 1;
+}
+
+.box .card
+{
+  margin: 5px;
+  transform: translateY(50%);
+  z-index: 2;
+}
+
+.box .card button
+{
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+  height: 50px;
+  padding: 10px 30px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  font-size: 1.2em;
   font-weight: 600;
-  color: #208CC5;
-  line-height: 1.2em;
+  background: linear-gradient(120deg, #00ccff 0%, #d400d4 100%);
+  color: #fff;
+  letter-spacing: 4px;
+  cursor: pointer;
+
+  /* くるくる用途 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box .card button:hover
+{
+  opacity: 0.9;
+}
+
+.box .card p
+{
+  color: #fff;
   text-align: center;
-  padding: 10px;
-  word-wrap: break-word;
 }
 
 /* くるくる */
@@ -112,4 +130,26 @@ body
   100% {
     transform: rotate(360deg);
   }
+}
+
+.logo
+{
+  position: absolute;
+  left: 50%;
+  top: 10%;
+  transform: translateX(-50%);
+  width: 192px;
+  height: 192px;
+  z-index: 3;
+}
+
+.logo img
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(0.9);
 }
