--- a/client/style.css
+++ b/client/style.css
@@ -9,7 +9,7 @@
 section
 {
   position: relative;
-  background: #161623;
+  background: #0c1022;
   min-height: 100vh;
   overflow: hidden;
   display: flex;
